--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.5;
   background-color: var(--main-bg-color);
 }
 
